--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -2215,7 +2215,7 @@
    ],
    "source": [
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "ConfusionMatrixDisplay.from_estimator(best_model, X_test, y_test)"
+    "ConfusionMatrixDisplay.from_estimator(best_model, X_test, y_test)\n"
    ]
   },
   {
